--- a/hello/index.html
+++ b/hello/index.html
@@ -26,15 +26,15 @@
                     // var audio2 = $('#section2').find('audio').get(0);
                     var video_light = $('#section2').find('video').get(0);
                     // audio1.play();
+                    $('#section2').addClass('active');
                     video_light.play()
-                    setTimeout(function(){
-                        $('#section2').addClass('active');
+                    // setTimeout(function(){
                         // audio1.pause();                     
                         // audio2.play();
                         // setTimeout(function(){
                             // audio2.pause()
                         // }, 7700);
-                    }, 2000)
+                    // }, 2000)
                 })
             })(window.jQuery);
         </script>
