--- a/hello/index.html
+++ b/hello/index.html
@@ -14,7 +14,7 @@
                 <div class="inner"></div>
             </section>
             <section id="section2" class="section">
-                <video src="./resource/light.mp4" preload></video>
+                <video src="./resource/light.mp4" preload  webkit-playsinline></video>
             </section>
         </div>
         <script src="./jquery-1.10.2.min.js"></script>
