--- a/hello/index.html
+++ b/hello/index.html
@@ -7,6 +7,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="blank">
         <title></title>
         <link rel="stylesheet" href="./index.css">
+        <script src="./jquery-1.10.2.min.js"></script>
+        <script src="./iphone-inline-video.browser.js"></script>
     </head>
     <body>
         <div id="main">
@@ -14,10 +16,9 @@
                 <div class="inner"></div>
             </section>
             <section id="section2" class="section">
-                <video src="./resource/light.mp4" preload  webkit-playsinline></video>
+                <video src="./resource/light.mp4" preload  playsinline></video>
             </section>
         </div>
-        <script src="./jquery-1.10.2.min.js"></script>
         <script>
             (function($){
                 $('#section1').on('click', function(){
@@ -26,8 +27,9 @@
                     // var audio2 = $('#section2').find('audio').get(0);
                     var video_light = $('#section2').find('video').get(0);
                     // audio1.play();
-                    $('#section2').addClass('active');
+                    makeVideoPlayableInline(video_light);
                     video_light.play()
+                    $('#section2').addClass('active');
                     // setTimeout(function(){
                         // audio1.pause();                     
                         // audio2.play();
