--- a/hello/index.html
+++ b/hello/index.html
@@ -15,7 +15,7 @@
                 <audio src="./resource/click.mp3"></audio>
             </section>
             <section id="section2" class="section">
-                <video src="./resource/light.mp4" preload  playsinline></video>
+                <video src="./resource/light.mp4" preload webkit-playsinline playsinline></video>
             </section>
         </div>
         <script src="./jquery-1.10.2.min.js"></script>
